--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/imageView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:src="@color/colorAccent"
+        android:src="@color/grey"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,38 +30,45 @@
         app:layout_constraintVertical_bias="1.0">
 
 
-        <EditText android:id="@+id/editText"
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="55dp"
-            android:layout_marginTop="40dp"
-            android:hint="@string/text1"
-            android:maxLines="1"
+            android:layout_marginLeft="40dp"
+            android:layout_marginBottom="35dp"
+            android:layout_marginTop="85dp"
+            android:text="@string/MobileNO"
             android:textColor="@color/black"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.047"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.115" />
+            android:textSize="25dp"/>
+
+       <EditText
+           android:layout_width="200dp"
+           android:layout_height="30dp"
+           android:layout_marginLeft="40dp"
+           android:layout_marginBottom="35dp"
+           android:layout_marginTop="35dp"
+           />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:layout_marginBottom="35dp"
+            android:text="@string/Submit"
+            android:background="@color/colorPrimary"
+            android:layout_marginTop="35dp"/>
 
         <Button
-            android:id="@+id/button"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:baselineAligned="false"
-            android:onClick="sendMessage"
-            android:text="@string/changeText" />
+            android:layout_marginLeft="170dp"
+            android:layout_marginTop="-85dp"
+            android:layout_marginBottom="85dp"
+            android:background="@color/colorPrimary"
+            android:text="@string/Skip" />
 
 
     </LinearLayout>
 
-    <androidx.constraintlayout.widget.Barrier
-        android:id="@+id/barrier"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:barrierDirection="left" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
